--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,256 @@
 
-% The entry below contains non-ASCII chars that could not be converted
-% to a LaTeX equivalent.
+
+@ARTICLE{McRae2006-nf,
+  title     = "{ISOLATION} {BY} {RESISTANCE}",
+  author    = "McRae, Brad H and N{\"u}rnberger, B",
+  abstract  = "Abstract Despite growing interest in the effects of landscape
+               heterogeneity on genetic structuring, few tools are available to
+               incorporate data on landscape composition into population
+               genetic studies. Analyses of isolation by distance have
+               typically either assumed spatial homogeneity for convenience or
+               applied theoretically unjustified distance metrics to compensate
+               for heterogeneity. Here I propose the isolation-by-resistance
+               (IBR) model as an alternative for predicting equilibrium genetic
+               structuring in complex landscapes. The model predicts a positive
+               relationship between genetic differentiation and the resistance
+               distance, a distance metric that exploits precise relationships
+               between random walk times and effective resistances in
+               electronic networks. As a predictor of genetic differentiation,
+               the resistance distance is both more theoretically justified and
+               more robust to spatial heterogeneity than Euclidean or least
+               cost path-based distance measures. Moreover, the metric can be
+               applied with a wide range of data inputs, including coarse-scale
+               range maps, simple maps of habitat and nonhabitat within a
+               species' range, or complex spatial datasets with habitats and
+               barriers of differing qualities. The IBR model thus provides a
+               flexible and efficient tool to account for habitat heterogeneity
+               in studies of isolation by distance, improve understanding of
+               how landscape characteristics affect genetic structuring, and
+               predict genetic and evolutionary consequences of landscape
+               change.",
+  journal   = "Evolution",
+  publisher = "The Society for the Study of Evolution",
+  volume    =  60,
+  number    =  8,
+  pages     = "1551--1561",
+  month     =  aug,
+  year      =  2006
+}
+
+@ARTICLE{Lett2015-wv,
+  title    = "Linking local retention, self-recruitment, and persistence in
+              marine metapopulations",
+  author   = "Lett, Christophe and Nguyen-Huu, Tri and Cuif, Marion and
+              Saenz-Agudelo, Pablo and Kaplan, David M",
+  abstract = "Three indices of larval retention have been used in the
+              literature to assess the tendency for self-maintenance of local
+              marine populations: local retention (LR), self-recruitment (SR),
+              and relative local retention (RLR). Only one of these, LR,
+              defined as the ratio of locally produced settlement to local egg
+              production, has a clear relationship to self-persistence of
+              individual sites. However, SR, the ratio of locally produced
+              settlement to settlement of all origins at a site, is generally
+              easier to measure experimentally. We use theoretical, simulation,
+              and empirical approaches to bridge the gap between these
+              different indices, and demonstrate that there is a proportional
+              relationship between SR and LR, for metapopulations close to a
+              stable state and with lifetime egg production (LEP) approximately
+              uniform over space. Similarly, for systems where larval mortality
+              rates are a relatively uniform function of release site, RLR
+              (defined as the ratio of locally produced settlement to all
+              settlement of local origin) and LR will also be proportional.
+              Therefore, SR and RLR provide information on relative rates of LR
+              for systems satisfying these conditions. Furthermore, the ratio
+              between LR and SR can be used to evaluate global persistence of
+              metapopulations, and therefore provides valuable information not
+              necessarily available if only LR is considered.",
+  journal  = "Ecology",
+  volume   =  96,
+  number   =  8,
+  pages    = "2236--2244",
+  month    =  aug,
+  year     =  2015,
+  language = "en"
+}
+
+@ARTICLE{Munguia-Vega2015-rh,
+  title    = "Marine reserves help preserve genetic diversity after impacts
+              derived from climate variability: Lessons from the pink abalone
+              in Baja California",
+  author   = "Mungu{\'\i}a-Vega, Adri{\'a}n and S{\'a}enz-Arroyo, Andrea and
+              Greenley, Ashley P and Espinoza-Montes, Jose Antonio and Palumbi,
+              Stephen R and Rossetto, Marisa and Micheli, Fiorenza",
+  abstract = "Genetic diversity is crucial for the adaptation of exploited
+              species like the pink abalone (Haliotis corrugata), faced with
+              threats from climate change, overfishing and impacts associated
+              with aquaculture production. While marine reserves are commonly
+              used to mitigate risks to marine populations, the duration, size,
+              location and larval connectivity needed for a reserve to help
+              conserve genetic resources is still poorly understood. Here, we
+              examine the effects of fishing, reserves, and restocking on the
+              genetic diversity of 10 populations from central Baja California,
+              Mexico, and Southern California, USA. We demonstrate that each
+              population shows characteristic genetic signatures according to
+              recent management decisions. We found high allelic diversity,
+              particularly rare alleles, a larger effective population size and
+              a lack of a recent genetic bottleneck in pink abalones within a
+              small (0.8 km2), recently established (5 years) reserve in Baja
+              California, compared to other fished sites after a climatic
+              bottleneck. Higher diversity may result from the presence of
+              older animals in the reserve. Due to its location, the reserve
+              may also act as an important hub connecting distant populations
+              via larval dispersal. In contrast, a population from California
+              showed genetic isolation, loss of allelic diversity and high
+              relatedness, consistent with the collapse of fisheries in the
+              1990s and their lack of recovery thereafter. In addition, a
+              fished area in Baja California with a history of restocking for
+              over a decade showed an increase in frequency of related
+              individuals and high genetic differentiation from nearby sites
+              that were consistent with the production of larvae from a few
+              adults in the laboratory. A network of strategically placed small
+              marine reserves that considers ocean circulation patterns could
+              help to maintain genetic diversity and connectivity of exploited
+              populations.",
+  journal  = "Global Ecology and Conservation",
+  volume   =  4,
+  pages    = "264--276",
+  month    =  jul,
+  year     =  2015,
+  keywords = "Marine reserve; Overfishing; Restocking; Microsatellite; Larval
+              dispersal"
+}
+
+@ARTICLE{Hock2014-or,
+  title    = "Connectivity networks reveal the risks of crown-of-thorns
+              starfish outbreaks on the Great Barrier Reef",
+  author   = "Hock, Karlo and Wolff, Nicholas H and Condie, Scott A and
+              Anthony, Kenneth R N and Mumby, Peter J",
+  abstract = "* Many ecosystems suffer systemwide outbreaks of damaging species
+              propagating from primary outbreak sites. Connectivity patterns
+              can identify parts of the ecosystem that help turn local
+              outbreaks into a systemwide contagion through a series of
+              transmission events. Here, we show that patterns of larval
+              connectivity among reefs can help explain periodic
+              crown-of-thorns starfish (COTS) epidemics across the Great
+              Barrier Reef (GBR). * We simulated potential dispersal of COTS
+              larvae to obtain a connectivity network of coral reefs across the
+              entire GBR. Network analysis revealed areas of high local
+              connectivity where any outbreaks could be amplified locally, as
+              well as those areas with potential to cause large-scale epidemics
+              with ecosystem-wide impacts. * We find that the regions where
+              COTS epidemics are known to originate are predictable from their
+              high local and systemwide connectivity. Extensive larval
+              exchanges among reef clusters in these regions can start a chain
+              reaction of COTS population build-up. The same regions also have
+              high potential to reach and affect other parts of the GBR,
+              thereby maximizing the likelihood that any outbreaks would
+              eventually propagate throughout the ecosystem. * Hydrodynamic
+              properties and geography of the GBR make it vulnerable to COTS
+              epidemics. Using network analysis to identify regions with
+              high-risk high-impact sources could help control these
+              devastating events in future. * Synthesis and applications. The
+              observed centre of origin for COTS epidemics (the
+              Cooktown--Cairns region) can be predicted from its elevated
+              short- and long-range levels of larval connectivity. Connectivity
+              analysis of per-reef risks provides spatially explicit targets to
+              guide surveillance and control measures that might help curtail
+              COTS epidemics through prioritization of highly connected reefs.
+              The analytical approach developed here for COTS connectivity can
+              also be applied to identify well-connected patches and regions in
+              other interconnected ecological systems.",
+  journal  = "J. Appl. Ecol.",
+  volume   =  51,
+  number   =  5,
+  pages    = "1188--1196",
+  month    =  oct,
+  year     =  2014,
+  keywords = "Acanthaster planci; contagion; coral cover; coral reef;
+              dispersal; epidemic; outbreak dynamics; pest control; reef
+              management; spatial network"
+}
+
+@ARTICLE{Almany2009-vt,
+  title     = "Connectivity, biodiversity conservation and the design of marine
+               reserve networks for coral reefs",
+  author    = "Almany, G R and Connolly, S R and Heath, D D and Hogan, J D and
+               Jones, G P and McCook, L J and Mills, M and Pressey, R L and
+               Williamson, D H",
+  abstract  = "Networks of no-take reserves are important for protecting coral
+               reef biodiversity from climate change and other human impacts.
+               Ensuring that reserve populations are connected to each other
+               and non-reserve populations by larval dispersal allows for
+               recovery from disturbance and is a key aspect of resilience. In
+               general, connectivity between reserves should increase as the
+               distance between them decreases. However, enhancing connectivity
+               may often tradeoff against a network's ability to
+               representatively sample the system's natural variability. This
+               ``representation'' objective is typically measured in terms of
+               species richness or diversity of habitats, but has other
+               important elements (e.g., minimizing the risk that multiple
+               reserves will be impacted by catastrophic events). Such
+               representation objectives tend to be better achieved as reserves
+               become more widely spaced. Thus, optimizing the location, size
+               and spacing of reserves requires both an understanding of larval
+               dispersal and explicit consideration of how well the network
+               represents the broader system; indeed the lack of an integrated
+               theory for optimizing tradeoffs between connectivity and
+               representation objectives has inhibited the incorporation of
+               connectivity into reserve selection algorithms. This article
+               addresses these issues by (1) updating general recommendations
+               for the location, size and spacing of reserves based on emerging
+               data on larval dispersal in corals and reef fishes, and on
+               considerations for maintaining genetic diversity; (2) using a
+               spatial analysis of the Great Barrier Reef Marine Park to
+               examine potential tradeoffs between connectivity and
+               representation of biodiversity and (3) describing a framework
+               for incorporating environmental fluctuations into the
+               conceptualization of the tradeoff between connectivity and
+               representation, and that expresses both in a common,
+               demographically meaningful currency, thus making optimization
+               possible.",
+  journal   = "Coral Reefs",
+  publisher = "Springer-Verlag",
+  volume    =  28,
+  number    =  2,
+  pages     = "339--351",
+  month     =  jun,
+  year      =  2009,
+  language  = "en"
+}
+
+@ARTICLE{Bodmer1968-vw,
+  title     = "A migration matrix model for the study of random genetic drift",
+  author    = "Bodmer, W F and Cavalli-Sforza, L L",
+  abstract  = "HE buffering effect of cross migration on random genetic drift
+               in partially isolated populations was first studied in a very
+               simple model which SEWALL WRIGHT called the ``island
+               model''(1943, 1951), In this model every population receives a
+               fraction m per generation of its genes from a common gene pool
+               with a constant gene frequency. The name ``island model'' refers
+               to the fact that the exchange among islands is effectively
+               independent of the distance between them. In other words, every
+               island exchanges genes equally with every",
+  journal   = "Genetics",
+  publisher = "Genetics Soc America",
+  volume    =  59,
+  number    =  4,
+  pages     = "565--592",
+  month     =  aug,
+  year      =  1968,
+  language  = "en"
+}
+
+@INCOLLECTION{Caswell2014-la,
+  title     = "Matrix Population Models",
+  booktitle = "Wiley {StatsRef}: Statistics Reference Online",
+  author    = "Caswell, Hal",
+  abstract  = "Matrix population models are discrete-time structured population
+               models in which individuals are classified into discrete stages
+               (age classes, size classes, developmental stages, spatial
+               locations, etc.).",
+  publisher = "John Wiley \& Sons, Ltd",
+  year      =  2014
+}
 
 @ARTICLE{Fall2007-ku,
   title     = "Spatial Graphs: Principles and Applications for Habitat
